--- a/final-project.Rmd
+++ b/final-project.Rmd
@@ -1,9 +1,9 @@
 ---
-title: "The Demonstration Effect"
+title: "The Demonstration Effect of Regime Types"
 output: pdf_document
 ---
 
-```{r setup, include=FALSE, echo = FALSE, message=FALSE}
+```{r setup, include=FALSE, echo = FALSE, message=FALSE, warning=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(readr)
@@ -17,12 +17,13 @@ library(knitr)
   To what extent is this phenomenon real? Where can we observe it in history? How powerful is the demonstration effect? And what implications do its existence bring? 
 
   The purpose of this project is to explore the demonstration effect throughout the 20th century, using a temporal method and a series of linear regressions in order to determine the strength of the demonstration effect. Toward this end, we will be examining two cases: that of the USSR and that of Spain and Portugal, and observe the changes in their corresponding regime types in the relevant time periods. For the USSR, the time period in question is from 1917 to 1991, and the regime type in question is single party regimes, with a geographic focus on Europe and some observations in Asia. For Spain and Portugal, the time period will begin in 1975, and will span until the year 2000, with the regime type in question being democracy, and the particular regions being Europe and Latin America. 
+    We hypothesize that the demonstration effect will increase the prevalence of a given regime type based on geographic proximity to the point of origin. As such, we would expect to find a greater connection between the USSR and single party regimes in Europe than elsewhere, with the same being true of Spain and Portugal and democracies in Europe. 
   
-  The data comes from a study published on March 14th, 2018 by Carsten Anckar and Cecilia Fredriksson in the Journal of European Political Science. It classifies political regimes from 1800 to 2016, using classifications which include a country's democratic/non-democratic status, a country's regime type (presidentialist, parliamentarian, personalist rule, etc.) and whether a country's head of state is popularly elected. The data in question is updated over the course of years, meaning that countries' regimes change over time during the data set; consequently, the observed slopes are likely to be quite gentle. 
+  The data comes from a cross-sectional study published on March 14th, 2018 by Carsten Anckar and Cecilia Fredriksson in the Journal of European Political Science. It classifies political regimes from 1800 to 2016, using classifications which include a country's democratic/non-democratic status, a country's regime type (presidentialist, parliamentarian, personalist rule, etc.) and whether a country's head of state is popularly elected. Fredriksson and Anckar used expert definitions of the various terms in the data set in order to code the countries accordingly; their measure of democracy comes from Boix and Rosato's dichotomous democracy measure, while the specific regime types of similar levels of rigor. The data in question is updated over the course of years, meaning that countries' regimes change over time during the data set; consequently, the observed slopes are likely to be quite gentle. 
 
 \newpage
 
-```{r data, echo = FALSE}
+```{r data, echo = FALSE, warning = FALSE}
 
 data <- readxl::read_xlsx("data/41304_2018_149_MOESM2_ESM (1).xlsx")
 
@@ -59,6 +60,14 @@ data <- data %>%
     american = ifelse(
       ccode >= 2 & ccode < 200, 1, 0))
 
+data <- data %>%
+  mutate(continent = case_when(
+    asian == 1 ~ "asian",
+    african == 1 ~ "african",
+    european == 1 ~ "european",
+    american == 1 ~ "american"
+ ))
+
 data_democracy <- data %>%
   filter(democracy != 99 & democracy != "NA")
 
@@ -66,7 +75,7 @@ data_democracy <- data %>%
 
 ```
 
-```{r ussr, echo = FALSE}
+```{r ussr, echo = FALSE, warning = FALSE}
 
 #data_ussr
 
@@ -77,7 +86,7 @@ data_ussr <- data %>%
 
 lm_ussr <- lm(singleparty ~ year_new, data = data_ussr)
 
-summary(lm_ussr)$adj.r.squared
+# summary(lm_ussr)$adj.r.squared
 
 #data_ussr_alt
 
@@ -91,9 +100,9 @@ lm_ussr_alt <- lm(singleparty ~ year_new, data = data_ussr_alt)
 lm_ussr_alt_sq <- lm(singleparty ~ year_new +
                     I(year_new^2), data = data_ussr_alt)
 
-summary(lm_ussr_alt)$adj.r.squared
+# summary(lm_ussr_alt)$adj.r.squared
 
-summary(lm_ussr2_sq)$adj.r.squared
+# summary(lm_ussr_alt_sq)$adj.r.squared
 
 lm_ussr_alt_sq_values <- data_ussr_alt %>% select(year_new, singleparty)
 lm_ussr_alt_sq_values$ussr_alt_sq_values <-
@@ -113,9 +122,9 @@ lm_ussr2 <- lm(singleparty ~ year_new, data = data_ussr2)
 lm_ussr2_sq <- lm(singleparty ~ year_new +
                     I(year_new^2), data = data_ussr2)
 
-summary(lm_ussr2)$adj.r.squared
+# summary(lm_ussr2)$adj.r.squared
 
-summary(lm_ussr2_sq)$adj.r.squared
+# summary(lm_ussr2_sq)$adj.r.squared
 
 lm_ussr2_sq_values <- data_ussr2 %>% select(year_new, singleparty)
 lm_ussr2_sq_values$ussr2_sq_values <-
@@ -135,9 +144,9 @@ lm_ussr3 <- lm(singleparty ~ year_new, data = data_ussr3)
 lm_ussr3_sq <- lm(singleparty ~ year_new +
                     I(year_new^2), data = data_ussr3)
 
-summary(lm_ussr3)$adj.r.squared
+# summary(lm_ussr3)$adj.r.squared
 
-summary(lm_ussr3_sq)$adj.r.squared
+# summary(lm_ussr3_sq)$adj.r.squared
 
 lm_ussr3_sq_values <- data_ussr3 %>% select(year_new, singleparty)
 lm_ussr3_sq_values$ussr3_sq_values <-
@@ -155,9 +164,9 @@ lm_ussr3_alt <- lm(singleparty ~ year_new, data = data_ussr3_alt)
 lm_ussr3_alt_sq <- lm(singleparty ~ year_new +
                     I(year_new^2), data = data_ussr3_alt)
 
-summary(lm_ussr3_alt)$adj.r.squared
+# summary(lm_ussr3_alt)$adj.r.squared
 
-summary(lm_ussr3_alt_sq)$adj.r.squared
+# summary(lm_ussr3_alt_sq)$adj.r.squared
 
 lm_ussr3_alt_sq_values <- data_ussr3_alt %>% select(year_new, singleparty)
 lm_ussr3_alt_sq_values$ussr3_alt_sq_values <-
@@ -174,7 +183,7 @@ data_ussr4 <- data %>%
 
 lm_ussr4 <- lm(singleparty ~ year_new, data = data_ussr4)
 
-summary(lm_ussr4)$adj.r.squared
+# summary(lm_ussr4)$adj.r.squared
 
 #data_ussr5
 
@@ -185,7 +194,7 @@ data_ussr5 <- data %>%
 
 lm_ussr5 <- lm(singleparty ~ year_new, data = data_ussr5)
 
-summary(lm_ussr5)$adj.r.squared
+# summary(lm_ussr5)$adj.r.squared
 
 #data_ussr5_alt
 
@@ -196,7 +205,7 @@ data_ussr5_alt <- data %>%
 
 lm_ussr5_alt <- lm(singleparty ~ year_new, data = data_ussr5_alt)
 
-summary(lm_ussr5_alt)$adj.r.squared
+# summary(lm_ussr5_alt)$adj.r.squared
 
 # The fourth and fifth regressions also change baseline year.
 
@@ -223,7 +232,7 @@ data_ussr_regime_change1950 <- full_join(data_ussr2_test, data_ussr3_test, by = 
 lm_ussr_regime_change1950 <- lm(regime_change ~ year_new,
   data = data_ussr_regime_change1950)
 
-summary(lm_ussr_regime_change1950)$adj.r.squared
+# summary(lm_ussr_regime_change1950)$adj.r.squared
 
 # Regime change 1950 - 1987
 
@@ -240,7 +249,7 @@ data_ussr_regime_change1987 <- full_join(data_ussr3_test, data_ussr4_test, by = 
 lm_ussr_regime_change1987 <- lm(regime_change ~ year_new,
   data = data_ussr_regime_change1987)
 
-summary(lm_ussr_regime_change1987)$adj.r.squared
+# summary(lm_ussr_regime_change1987)$adj.r.squared
 
 # New Idea for Regime Change Graph
 
@@ -298,7 +307,7 @@ data_ussr_regime_change1950_3 <-
 
   A simple view at these graphs and at their correlations will communicate that this comparison is not strong. The linear models for both graphs do not reflect the drastic changes in the population of single party regimes around the years 1950 and 1991, and even the quadratic model featured in the European graph only slightly reflects this. Consequently, while the years since 1917 has some predictive power on the prevalence of single party regimes both in the world and particularly in Europe, our analysis can be improved.
 
-```{r ussrgeom, echo = FALSE}
+```{r ussrgeom, echo = FALSE, warning = FALSE}
 
 ussr_geom <- ggplot(data = data_ussr, mapping = 
                       aes(x = year_new, y = singleparty)) +
@@ -342,21 +351,21 @@ ussr2_geom
   Given that this analysis is attempting to use the year since a certain event as a predictor of a certain regime type in order to determine to what extent a demonstration effect exists for regime change, changing the year at which the analysis starts, i.e. what year the event occurs, would be a prudent decision. The below graphs do that, with certain graphs also expanding the geographic region beyond Europe to see if there is a greater correlation in Europe and Asia (the two continents which contained the USSR) than in Europe alone. 
   
   As a result of the method by which the lines of fit were calculated, additional changes were required in order to make them better reflect the column graph in the background. The first graph makes use of a 100x multiplier, while the subsequent graphs use a 30x multiplier; these multipliers were not set based on a rigorous statistical method and, as such, it should be understood that the lines do not correspond precisely to the column graphs behind them. To reiterate, the lines are there to communicate the trend in the data, but are not precise to the column graph itself. 
-  
-    The first graph shows the concentration of single party regimes worldwide from the year 1950 to the year 2000. The graph shows a steady increase from 1950 to 1960, stagnation through the mid-sixties to the mid-seventies, and then a jump following approximately 1975, peaking at around 1978. Following that, the concentration of single party regimes seems to decline, with it dropping dramatically in the early 1990s. The line of best fit for this set of data shows a steady decline beginning at a moderate height; the quadratic curve for this model begins at a lower amount, slightly rises to peak around 1962, and then gently curves down toward 2000, finishing slightly above the linear fit. The r-squared value for the linear fit is 0.03463, while the correlation for the quadratic fit is 0.04009, meaning that the quadratic fit is not particularly better at predicting this relationship than the linear fit. 
+  The first graph shows the concentration of single party regimes worldwide from the year 1950 to the year 2000. The graph shows a steady increase from 1950 to 1960, stagnation through the mid-sixties to the mid-seventies, and then a jump following approximately 1975, peaking at around 1978. Following that, the concentration of single party regimes seems to decline, with it dropping dramatically in the early 1990s. The line of best fit for this set of data shows a steady decline beginning at a moderate height; the quadratic curve for this model begins at a lower amount, slightly rises to peak around 1962, and then gently curves down toward 2000, finishing slightly above the linear fit. The r-squared value for the linear fit is 0.03463, while the correlation for the quadratic fit is 0.04009, meaning that the quadratic fit is not particularly better at predicting this relationship than the linear fit. 
     
-    The second graph features the data from Europe. It begins high at about 8 single party regimes in 1950, goes up to about 9 around 1953, and stays at that level until the late 1980s, in which it begins to fall dramatically. The fits for this set of data are much steeper than in the previous graph; the linear and quadratic fits begin relatively higher when compared to the previous graph, but also fall much faster; this reflects the swift pace at which single party regimes disappeared in Eurppe as the Soviet Union weakened. The r-squared for the linear fit is 0.1066, while the r-squared for the quadratic fit is 0.1094; these fits essentially hold the same predictive power over this period. These r-squared are notably higher than those worldwide, suggesting that the geographic connection may play an important role in the effectiveness of the demonstration effect. 
+  The second graph features the data from Europe. It begins high at about 8 single party regimes in 1950, goes up to about 9 around 1953, and stays at that level until the late 1980s, in which it begins to fall dramatically. The fits for this set of data are much steeper than in the previous graph; the linear and quadratic fits begin relatively higher when compared to the previous graph, but also fall much faster; this reflects the swift pace at which single party regimes disappeared in Eurppe as the Soviet Union weakened. The r-squared for the linear fit is 0.1066, while the r-squared for the quadratic fit is 0.1094; these fits essentially hold the same predictive power over this period. These r-squared are notably higher than those worldwide, suggesting that the geographic connection may play an important role in the effectiveness of the demonstration effect. 
     
-    The third graph includes the same years as the previous two graphs, but focuses on Europe and Asia, as opposed to the entire world or just Europe. The graph mixes the patterns of the previous two graphs, beginning at a moderate height, increasing somewhat in the mid-seventies, and falling off significantly in the late 1980s. The linear fit begins much higher than the quadratic fit and follows a much steeper trend downward; the two fits intersect in the late 1980s, immediately before the drop. The r-squared value of the linear fit is 0.04610 while the r-squared value of the quadratic fit is 0.04824; as such, neither fit is particularly stronger than other. 
+  The third graph includes the same years as the previous two graphs, but focuses on Europe and Asia, as opposed to the entire world or just Europe. The graph mixes the patterns of the previous two graphs, beginning at a moderate height, increasing somewhat in the mid-seventies, and falling off significantly in the late 1980s. The linear fit begins much higher than the quadratic fit and follows a much steeper trend downward; the two fits intersect in the late 1980s, immediately before the drop. The r-squared value of the linear fit is 0.04610 while the r-squared value of the quadratic fit is 0.04824; as such, neither fit is particularly stronger than other. 
     
-    When comparing the first three graphs, it becomes clear that the model with the strongest predictive power is that featured in the second graph, which pertains but to Europe. As such, our analysis of single party regime types in the 20th century suggests a geographic component to the demonstration effect, wherein a country's proximity to the epicenter of a certain regime type, in this case single party regimes emerging out of the USSR, increases its likelihood toward adopting such a regime type. However, it is also clear that, based on the low r-squared values, more goes into whether a country selects a given regime type than the demonstration effect. At its most robust thus far, the demonstration effect, measured in years since 1950, has accounted for approximately 11% of the variation in single party regimes in Europe. Though this number is respectable, its smallness suggests that a number of other factors exist which play a role in changing regime type. 
+  When comparing the first three graphs, it becomes clear that the model with the strongest predictive power is that featured in the second graph, which pertains but to Europe. As such, our analysis of single party regime types in the 20th century suggests a geographic component to the demonstration effect, wherein a country's proximity to the epicenter of a certain regime type, in this case single party regimes emerging out of the USSR, increases its likelihood toward adopting such a regime type. However, it is also clear that, based on the low r-squared values, more goes into whether a country selects a given regime type than the demonstration effect. At its most robust thus far, the demonstration effect, measured in years since 1950, has accounted for approximately 11% of the variation in single party regimes in Europe. Though this number is respectable, its smallness suggests that a number of other factors exist which play a role in changing regime type. 
     
-    Moving onto the last three graphs which cover the years since 1975 in Europe, the years since 1987 in Europe, and the years in 1987 in Europe and Asia, there is some sign of stronger measure. The fourth graph follows a similar pattern to the second graph; however, its r-squared value is slightly higher than the second graph at 0.1286. Interestingly, this graph's steeper, downward trend suggests an potential unraveling of the demonstration effect, where the Soviet Union's failure to maintain its coercive control over the various European states result in the collapse of the single party system in Europe as a whole. 
+  Moving onto the last three graphs which cover the years since 1975 in Europe, the years since 1987 in Europe, and the years in 1987 in Europe and Asia, there is some sign of stronger measure. The fourth graph follows a similar pattern to the second graph; however, its r-squared value is slightly higher than the second graph at 0.1286. Interestingly, this graph's steeper, downward trend suggests an potential unraveling of the demonstration effect, where the Soviet Union's failure to maintain its coercive control over the various European states result in the collapse of the single party system in Europe as a whole. 
     
   The fifth and sixth graphs are much less interesting than the previous four. The fifth graph consists of only three years, those after 1987, and shows the drop that occurred in the late 1980s from a much closer perspective. Due to the limited sample size afforded to the last graph, the line of best fit does not capture the pattern here particularly well, with an r-squared value of just 0.0615. The sixth graph does not fare much better, with an r-squared of 0.0156. The graph starts slightly higher than the fifth one and retains approximately 3 single party regimes following 1991, which would account for those regimes in Asia; the decreased predictive power of the model once again suggests the role of geography in the demonstration effect. 
   
   It should be noted that the data set is also limiting in certain ways particularly in regard to the possibility of performing a t-test and other tests of significance. Based on the analysis in the above paragraphs, it becomes relatively clear that not all of these curves are adequate measures of the demonstration effect. In particular, the fifth graph on the previous page is very lackluster at communicating any relationship between the variables in question; however, if one attempts to analyze the p-value for this particular graph, they will find that it is 2.2e-16 with a t-value of -9.417, far beyond the realm of statistical significance. The p-value is in this same range for all of the other graphs, suggesting its inadequacy as a measure for these graphs. As such, there will be no tests of significance of this variety in this report, as they do not communicate any useful information. The r-squared value is a much better measure of the relationship between the demonstration effect and the prevalence of certain regime types than is the p-value in this scenario. 
-```{r ussr2, echo = FALSE}
+  
+```{r ussr2, echo = FALSE, warning = FALSE}
 
 ussralt_geom <- ggplot(data = data_ussr_alt, mapping = 
                       aes(x = year_new, y = singleparty)) +
@@ -443,7 +452,7 @@ ussr5alt_geom
 
   Another way to measure the demonstration effect is to look at regime changes that have occurred within a given time frame, and examine how that may be related to a certain event. Unfortunately, the data available to this analysis makes performing this in the form of a linear regression over impracticable but, given that this information could still potentially be valuable, it shall be included as an addendum to the USSR section in the form of two tables. The two tables show a given European country in the left column and whether it changed from and to a single party regime between the set years. It should be noted that these tables measure whether the regime changed to or from being a single party regime in 1950 relative to 1917, and thus does not account for variation in between those years. This means that, if a single party regime were to emerge in 1924 and collapse in 1945, that  would not be accounted for by these tables; these tables also do not include certain European countries, as there was not data for them in the years covered. 
 
-```{r ussr_regime_change, echo = FALSE}
+```{r ussr_regime_change, echo = FALSE, warning = FALSE}
 
 # ussr_regime_change1950_geom <- ggplot(data = data_ussr_regime_change1950,
      #                                 mapping = aes(x = year_new,
@@ -482,7 +491,7 @@ knitr::kable(data_ussr_regime_change1950_3, col.names =
 
 ```
 
-```{r china, echo = FALSE, include = FALSE}
+```{r china, echo = FALSE, include = FALSE, warning = FALSE}
 
 # This code was part of a section I wanted to do on China
 # to better explore the geographic component of the demonstration effect.
@@ -523,42 +532,42 @@ lm_china3 <- lm(singleparty ~ year_new, data = data_china3)
 \newpage
 
 ## The Third Wave of Democratization
-```{r thirdwave, echo = FALSE}
+```{r thirdwave, echo = FALSE, warning = FALSE}
 
 # Democracy in the 20th century 
 
 data_full20 <- data_democracy %>%
   mutate(year_new = year - 1900) %>%
   filter(year_new > 0) %>%
-  select(year_new, democracy)
+  select(year_new, democracy, continent)
 
 lm_data_full20 <- 
   lm(democracy ~ year_new, data = data_full20)
 
-summary(lm_data_full20)$adj.r.squared
+# summary(lm_data_full20)$adj.r.squared
 
 # Democracy in the second half of the 20th century
 
 data_second_half_20 <- data_democracy %>%
   mutate(year_new = year - 1900) %>%
   filter(year_new > 50) %>%
-  select(year_new, democracy)
+  select(year_new, democracy, continent)
 
 lm_second_half_20 <- 
   lm(democracy ~ year_new, data = data_second_half_20)
 
-summary(lm_second_half_20)$adj.r.squared
+# summary(lm_second_half_20)$adj.r.squared
 
 # 75 wave with all countries
 
 data_wave <- data_democracy %>%
   mutate(year_new = year - 1900) %>%
   filter(year_new > 75) %>%
-  select(year_new, democracy)
+  select(year_new, democracy, continent)
 
 lm_wave <- lm(democracy ~ year_new, data = data_wave)
 
-summary(lm_wave)$adj.r.squared
+# summary(lm_wave)$adj.r.squared
 
 # 75 wave just in Europe
 
@@ -569,7 +578,7 @@ data_wave_europe <- data_democracy %>%
 
 lm_wave_europe <- lm(democracy ~ year_new, data = data_wave_europe)
 
-summary(lm_wave_europe)$adj.r.squared
+# summary(lm_wave_europe)$adj.r.squared
 
 # 75 wave in just Americas
 
@@ -580,7 +589,7 @@ data_wave_america <- data_democracy %>%
 
 lm_wave_america <- lm(democracy ~ year_new, data = data_wave_america)
 
-summary(lm_wave_america)$adj.r.squared
+# summary(lm_wave_america)$adj.r.squared
 
 # 75 wave in Europe and Americas
 
@@ -591,18 +600,18 @@ data_wave_eula <- data_democracy %>%
 
 lm_wave_eula <- lm(democracy ~ year_new, data = data_wave_eula)
 
-summary(lm_wave_eula)$adj.r.squared
+# summary(lm_wave_eula)$adj.r.squared
 
 # 85 start, the world
 
 data_wave_85 <- data_democracy %>%
   mutate(year_new = year - 1900) %>%
   filter(year_new > 85) %>%
-  select(year_new, democracy)
+  select(year_new, democracy, continent)
 
 lm_wave_85 <- lm(democracy ~ year_new, data = data_wave_85)
 
-summary(lm_wave_85)$adj.r.squared
+# summary(lm_wave_85)$adj.r.squared
 
 # 85 start, Europe
 
@@ -613,7 +622,7 @@ data_wave_europe_85 <- data_democracy %>%
 
 lm_wave_europe_85 <- lm(democracy ~ year_new, data = data_wave_europe_85)
 
-summary(lm_wave_europe_85)$adj.r.squared
+# summary(lm_wave_europe_85)$adj.r.squared
 
 # 85 start, Americas
 
@@ -624,7 +633,7 @@ data_wave_america_85 <- data_democracy %>%
 
 lm_wave_america_85 <- lm(democracy ~ year_new, data = data_wave_america_85)
 
-summary(lm_wave_america_85)$adj.r.squared
+# summary(lm_wave_america_85)$adj.r.squared
 
 # 85 start, Americas and Europe
 
@@ -635,18 +644,18 @@ data_wave_eula_85 <- data_democracy %>%
 
 lm_wave_eula_85 <- lm(democracy ~ year_new, data = data_wave_eula_85)
 
-summary(lm_wave_eula_85)$adj.r.squared
+# summary(lm_wave_eula_85)$adj.r.squared
 
 # 91 start, the world
 
 data_wave_91 <- data_democracy %>%
   mutate(year_new = year - 1900) %>%
   filter(year_new > 91) %>%
-  select(year_new, democracy)
+  select(year_new, democracy, continent)
 
 lm_wave_91 <- lm(democracy ~ year_new, data = data_wave_91)
 
-summary(lm_wave_91)$adj.r.squared
+# summary(lm_wave_91)$adj.r.squared
 
 # 91 start, Europe
 
@@ -657,7 +666,7 @@ data_wave_europe_91 <- data_democracy %>%
 
 lm_wave_europe_91 <- lm(democracy ~ year_new, data = data_wave_europe_91)
 
-summary(lm_wave_europe_91)$adj.r.squared
+# summary(lm_wave_europe_91)$adj.r.squared
 
 # 91 start, Americas
 
@@ -668,7 +677,7 @@ data_wave_america_91 <- data_democracy %>%
 
 lm_wave_america_91 <- lm(democracy ~ year_new, data = data_wave_america_91)
 
-summary(lm_wave_america_91)$adj.r.squared
+# summary(lm_wave_america_91)$adj.r.squared
 
 # 91 start, Americas and Europe
 
@@ -679,7 +688,7 @@ data_wave_eula_91 <- data_democracy %>%
 
 lm_wave_eula_91 <- lm(democracy ~ year_new, data = data_wave_eula_91)
 
-summary(lm_wave_eula_91)$adj.r.squared
+# summary(lm_wave_eula_91)$adj.r.squared
 
 # 1950 Americas
 
@@ -690,18 +699,24 @@ data_wave_america_50 <- data_democracy %>%
 
 lm_wave_america_50 <- lm(democracy ~ year_new, data = data_wave_america_50)
 
-summary(lm_wave_america_50)$adj.r.squared
+# summary(lm_wave_america_50)$adj.r.squared
 
 ```
 
   In 1975, a series of events would be set in motion to change the state of democracy in the world. Following Portuguese democratization and the death of Spanish dictator Franco, the Iberian peninsula would become democratic. Over the course of the next two decades, a number of other countries around the world would democratize, particularly those in Europe and Latin America. Political scientists have termed the spread of democracy in this era "the demonstration effect." To what extent is the spread of democracy in the Third Wave attributable to the demonstration effect?
   
-```{r thirdwave_world, echo = FALSE}
+  Below are a series of graphs which seek to answer that question by analyzing the relationship between time passed since a given year and the prevalence of democracies within a given region. For this first set of graphs, the years are 1900, 1950, 1975, 1985, and 1991, while the region is the world. It should be noted that the regression lines featured in this set of graphs suffer from the same issue as those in the analysis of the USSR; the multiplier for these graphs is 150. The first two graphs provide context for the graphs after the third wave. They show the evolution of democracies across the world over the course of the 20th century. These graphs demonstrate that there was a significant increase in democracies over the course of the 20th century, and enable us to narrow our scope to years that might be of more particular interest. 
+  
+  The third graph shows the prevalence of democracies across the world from the year 1975, where we identify the beginning of the Third Wave of Democratization, to the year 2000. As is visible in the graph, there is a gentle increase of approximately 20 between the year 1975 and 1990, and then a dramatic increase of almost 40 countries following the year 1990.The r-squared of the line of best fit is 0.0418, which means that the variation in year accounts for 4.2% of the variation in democracies across the world. While this is a solid number, there are other avenues we can take to potentially improve it. 
+  
+  That improvement, however, is not found in the fourth and fifth graphs. These graphs, which change the start of the analysis to 1985 and 1991 to measure if another year better fits this data, have significantly lower r-squared values than the 1975 graph at 0.0161 and 0.0044 respectively. This becomes clear when looking at the graphs, whose lines of best fit become less steep, and in which the variation between the bars decrease relative to the previous graphs. If we want to get a better view of where the demonstration effect was the most powerful, we need to reduce our view to the size of continents. 
+  
+```{r thirdwave_world, echo = FALSE, warning = FALSE}
 
 # Full century graph
 
 data_full20_geom <- ggplot(data = data_full20, mapping = 
-                      aes(x = year_new, y = democracy)) +
+                      aes(x = year_new, y = democracy, color = continent)) +
   geom_col(aes(y = democracy)) +
   geom_abline(intercept = .206197 * 150, slope = 0.003042 * 150) +
   ylim(0, 125) + 
@@ -715,7 +730,7 @@ data_full20_geom <- ggplot(data = data_full20, mapping =
 # Post 1950 graph
 
 data_second_half_20_geom <- ggplot(data = data_second_half_20, mapping = 
-                      aes(x = year_new, y = democracy)) +
+                      aes(x = year_new, y = democracy, color = continent)) +
   geom_col(aes(y = democracy)) +
   geom_abline(intercept = -0.026878 * 150, slope = 0.005564 * 150) +
   ylim(0, 125) + 
@@ -729,7 +744,7 @@ data_second_half_20_geom <- ggplot(data = data_second_half_20, mapping =
 # 75 wave
 
 data_wave_geom <- ggplot(data = data_wave, mapping = 
-                      aes(x = year_new, y = democracy)) +
+                      aes(x = year_new, y = democracy, color = continent)) +
   geom_col(aes(y = democracy)) +
   geom_abline(intercept = -0.342910 * 150, slope = 0.008764 * 150) +
   ylim(0, 125) + 
@@ -743,7 +758,7 @@ data_wave_geom <- ggplot(data = data_wave, mapping =
 # 85 start
 
 data_wave_85_geom <- ggplot(data = data_wave_85, mapping = 
-                      aes(x = year_new, y = democracy)) +
+                      aes(x = year_new, y = democracy, color = continent)) +
   geom_col(aes(y = democracy)) +
   geom_abline(intercept = -0.174975 * 150, slope = 0.007166 * 150) +
   ylim(0, 125) + 
@@ -757,7 +772,7 @@ data_wave_85_geom <- ggplot(data = data_wave_85, mapping =
 # 91 start
 
 data_wave_91_geom <- ggplot(data = data_wave_91, mapping = 
-                      aes(x = year_new, y = democracy)) +
+                      aes(x = year_new, y = democracy, color = continent)) +
   geom_col(aes(y = democracy)) +
   geom_abline(intercept = 0.095449 * 150, slope = 0.004646 * 150) +
   ylim(0, 125) + 
@@ -776,8 +791,19 @@ data_wave_85_geom
 data_wave_91_geom
 
 ```
+\newpage
 
-```{r thirdwave_europe, echo = FALSE}
+### European Democracies and Geographic Proximity
+
+  Perhaps the European theater would be more applicable than the global stage. After all, Europe is geographically closest to where we identify the start of the Third Wave in Spain and Portugal, and the second half of the Third Wave was prominent in Europe with the fall of the Soviet Union. To examine this, the following three graphs focus on Europe, with the regressions based on 1975, 1985, and 1991 respectively. The multiplier on the regression lines is 40 for these graphs.
+  
+  The first graph shows the number of European democracies as essentially plateaued until the late 1980s, where there is a sharp jump of about 15 democracies between 1987 and 1993. This graph suggests that 1975 is not a particularly important year in the context of European democratization. The r-squared value for this line of best fit is 0.0380, which is slightly lower than the r-squared value for the same time period on the world stage. An r-squared of this magnitude suggests that other factors are much more important in the spread of European democracy during this time.
+  
+  Does changing the start date to be closer to the year of greatest change have a significant effect on the r-squared of European democracies? The answer is yes, though in the opposite direction of what would be hoped.For the second graph, which begins in 1985, the r-squared value is 0.01460, while the 1991 graph has an even lower r-squared value at 0.001488. This is reflected in the graphs, where the regression lines are less steep than the 1975 selection, and the columns are much more homogeneous in size.
+  
+  These results for the European theater are interesting in that they seem to contradict the geographic connection seen in the Soviet example. Is there possibly another factor which more adequately reflects the effectiveness of the demonstration effect for the Third Wave?
+  
+```{r thirdwave_europe, echo = FALSE, warning = FALSE}
 
 data_wave_europe_geom <- ggplot(data = data_wave_europe, mapping = 
                       aes(x = year_new, y = democracy)) +
@@ -819,8 +845,16 @@ data_wave_europe_geom
 data_wave_europe_85_geom
 data_wave_europe_91_geom
 ```
+\newpage
 
-```{r thirdwave_americas, echo = FALSE}
+### American Democracies and the Cultural Connection
+
+  To what extent could culture and history be important in determining the effectiveness of the demonstration effect? That is what we will be attempting to determine in this section on American democracies. This section includes both North and South America, which means it includes the United States and Canada; the multiplier on the lines of regression in this section is 30. There are four graphs featured in this section, which use data from 1950 onward, 1975 onward, 1985 onward, and 1991 onward respectively. 
+  The first graph features data from 1950 onward, and is intended to provide a sense of context for American democratization. As the graph shows, there is a sizable increase in the number of democracies in the 1950s, and a major increase as the 1980s begin, which leads to a plateau in the 1990s. The r-squared value of this line is very strong relative to the previous measurements at 0.1351. 
+  Interestingly, this r-squared value is actually better than the r-squared value of the data beginning at 1975, where we identify the start of the Third Wave of Democratization. The r-squared value for that line of best fit is .1028 which, while much higher than those of Europe or the world as a whole, is not as high as would be hoped. However, when compared to the subsequent r-squared values, it offers a hint as to what we can learn regarding the Third Wave of Democratization in America. 
+  The third and fourth graphs are similar to the later graphs of Europe, in terms of the fact that they largely feature homogeneous columns and a nearly flat line. It is clear from these graphs that the Third Wave of Democratization and subsequently the demonstration effect were not of these times. The r-squared values for these periods also reflect that, at 0.02212 for the 1985 graph and just 0.00909 for the 1991 graph. 
+  What does this tell us about the Third Wave of Democratization, and the demonstration effect as a whole? Firstly, it is clear that the demonstration effect weakens over time; it largely occurred in a burst, which is visible in the 1950 and 1975 graphs. Secondly, though the Third Wave did significantly change the numbers, the trend is actually stronger over the course of the 20th century, suggesting that the demonstration effect from Portuguese and Spanish democratization may not have been as intense as previously thought. Regardless, it is clear from the r-squared values of the 1950 and 1975 graph that the demonstration effect played a role in American democratization in the last quarter of the 20th century. 
+```{r thirdwave_americas, echo = FALSE, warning = FALSE}
 
 data_wave_america_50_geom <- ggplot(data = data_wave_america_50, mapping = 
                       aes(x = year_new, y = democracy)) +
@@ -878,7 +912,16 @@ data_wave_america_91_geom
 
 ```
 
-```{r thirdwave_eula, echo = FALSE}
+```{r thirdwave_eula, echo = FALSE, warning = FALSE}
+
+# This was a section that combined Europe and Latin America
+# that I thought might be interesting to look at. 
+# However, the numbers are not particularly interesting,
+# and it does not offer a significant improvement toward my analysis.
+# Additionally, it interrupts the pacing of my report,
+# with the important conclusion coming in the previous paragraph.
+# Therefore, I decided to not include these graphs,
+# though they are present here if one wishes to view them. 
 
 data_wave_eula_geom <- ggplot(data = data_wave_eula, mapping = 
                       aes(x = year_new, y = democracy)) +
@@ -916,11 +959,19 @@ data_wave_eula_91_geom <- ggplot(data = data_wave_eula_91, mapping =
        x = "Years since 1900",
        y = "Number of Democracies")
 
-data_wave_eula_geom
-data_wave_eula_85_geom
-data_wave_eula_91_geom
+# data_wave_eula_geom
+# data_wave_eula_85_geom
+# data_wave_eula_91_geom
 
 ```
+
+\newpage
+
+## Conclusion
+
+  The research done in this study suggests that, in the example of the USSR and single party regimes, geographic proximity to a regime with a powerful state increases the likelihood that a given country will subscribe to that regime type; the research done in the Third Wave example suggests that the demonstration effect does exist, though it is of relatively minor strength, tends to be ephemeral, and is influenced by factors beyond geographic proximity. Toward this end, our hypothesis is somewhat correct, though it appears we overestimated the magnitude of the demonstration effect in changing these countries' regime types; based on the r-squared values of approximately 10%, 90% of the variation in regime types cannot be attributed to the demonstration effect as we measured it. Unfortunately, the limited size of the data set and the proliferation of missing data points made performing this analysis more difficult than expected. As mentioned in the section on the USSR, performing t-tests was impracticable with the data collected, as all of the t-values suggested statistical significance to an extreme extent. The use of the metric of years since x event was likely the cause of this, as the p-value does not adequately reflect the demonstration effect. The extent to which that metric accurately captures the demonstration effect is concerning, as the analysis of the study depends on a claim that does not have the axiomatic certainty of other such connections. However, such is the consequence of attempting to measure an abstract connection such as that: there will not be an easy solution to any problem. Having more data on connections between countries, and potentially other statistics, such as GDP per capita, could be useful to qualify the demonstration effect within the context of economic development, but such information was not available in this data set. 
+
+\newpage
 
 ## Code
 
